--- a/블로그글 만들기/blog.html
+++ b/블로그글 만들기/blog.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myBlog</title>
-    <link href="C:\Users\Minseohyun\Desktop\멋쟁이사자처럼대학\3주차\3주차과제\블로그글 만들기\blog.css" rel="stylesheet">
+    <link href="blog.css" rel="stylesheet">
 </head>
 <body>
     <div id="banner">
