--- a/form만들기/form.html
+++ b/form만들기/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="C:\Users\Minseohyun\Desktop\멋쟁이사자처럼대학\3주차\3주차과제\form만들기\form.css" rel="stylesheet">
+    <link href="form.css" rel="stylesheet">
 </head>
 <body>
     <div class="form-background">
